--- a/Trillo/starter/css/style.css
+++ b/Trillo/starter/css/style.css
@@ -15,5 +15,122 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+:root {
+  --color-primary:#eb2f64;
+  --color-primary-light:#FF3366;
+  --color-primary-dark:#BA265D;
+  --color-gray-light-1:#faf9f9;
+  --color-gray-light-2:#f4f2f2;
+  --color-gray-ligh-3:#f0eeee;
+  --color-gray-light-4:#ccc;
+  --color-gray-dark-1:#333;
+  --color-gray-dark-2:#777;
+  --color-gray-dark-3:#999;
+  --shadow-box:0 2rem 6rem rgba(0,0,0,.3)
+; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+*, *::after, *::before {
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box; }
+
 body {
-  background-color: #FF3366; }
+  font-family: "Open Sans" sans-serif;
+  line-height: 1.4;
+  font-weight: 400;
+  color: var(--color-gray-dark-2);
+  background-image: linear-gradient(to right bottom, var(--color-primary-dark), var(--color-primary-light));
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.header__logo {
+  height: 3.25rem; }
+
+.search__icon {
+  width: 2rem;
+  height: 2rem; }
+
+.user-nav__icon {
+  width: 2.25rem;
+  height: 2.25rem; }
+
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%; }
+
+/*
+COLORS
+
+Primary: #eb2f64
+Primary light: #FF3366
+Primary dark: #BA265D
+
+Grey light 1: #faf9f9
+Grey light 2: #f4f2f2
+Grey light 3: #f0eeee
+Grey light 4: #ccc
+
+Grey dark 1: #333
+Grey dark 2: #777
+Grey dark 3: #999
+
+*/
+:root {
+  --color-primary:#eb2f64;
+  --color-primary-light:#FF3366;
+  --color-primary-dark:#BA265D;
+  --color-gray-light-1:#faf9f9;
+  --color-gray-light-2:#f4f2f2;
+  --color-gray-ligh-3:#f0eeee;
+  --color-gray-light-4:#ccc;
+  --color-gray-dark-1:#333;
+  --color-gray-dark-2:#777;
+  --color-gray-dark-3:#999;
+  --shadow-box:0 2rem 6rem rgba(0,0,0,.3)
+; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+*, *::after, *::before {
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box; }
+
+body {
+  font-family: "Open Sans" sans-serif;
+  line-height: 1.4;
+  font-weight: 400;
+  color: var(--color-gray-dark-2);
+  background-image: linear-gradient(to right bottom, var(--color-primary-dark), var(--color-primary-light));
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--color-gray-light-2);
+  min-height: 50rem;
+  box-shadow: var(--shadow-box); }
+  .container .header {
+    height: 7rem;
+    background-color: #fff;
+    border-bottom: 1px solid var(--color-gray-light-2); }
+  .container .content {
+    display: flex; }
+    .container .content .sidebar {
+      flex: 0 0 20%;
+      height: 100%;
+      background-color: var(--color-gray-dark-1); }
+    .container .content .hotel-view {
+      background-color: orangered;
+      flex: 1; }
