--- a/Trillo/starter/css/style.css
+++ b/Trillo/starter/css/style.css
@@ -21,7 +21,7 @@ Grey dark 3: #999
   --color-primary-dark:#BA265D;
   --color-gray-light-1:#faf9f9;
   --color-gray-light-2:#f4f2f2;
-  --color-gray-ligh-3:#f0eeee;
+  --color-gray-light-3:#f0eeee;
   --color-gray-light-4:#ccc;
   --color-gray-dark-1:#333;
   --color-gray-dark-2:#777;
@@ -50,19 +50,149 @@ body {
   background-repeat: no-repeat; }
 
 .header__logo {
-  height: 3.25rem; }
+  height: 3.25rem;
+  margin-left: 2rem; }
 
-.search__icon {
-  width: 2rem;
-  height: 2rem; }
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .search__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-gray-light-2);
+    border: none;
+    padding: 0.7rem 2rem;
+    border-radius: 10rem;
+    width: 80%;
+    margin-right: -3.25rem;
+    transition: width 0.2s; }
+    .search__input:focus {
+      width: 90%;
+      outline: none;
+      background-color: var(--color-gray-light-3); }
+    .search__input::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-gray-light-4); }
+  .search__button {
+    border: none;
+    background-color: transparent; }
+  .search__icon {
+    width: 2rem;
+    height: 2rem;
+    fill: var(--color-gray-dark-3); }
 
-.user-nav__icon {
-  width: 2.25rem;
-  height: 2.25rem; }
+.user-nav {
+  display: flex;
+  align-items: center;
+  align-self: stretch; }
+  .user-nav > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    height: 100%; }
+  .user-nav > *:hover {
+    background-color: var(--color-gray-light-3); }
+  .user-nav__icon-box {
+    position: relative; }
+  .user-nav__icon {
+    width: 2.25rem;
+    height: 2.25rem;
+    fill: var(--color-gray-dark-2); }
+  .user-nav__notification {
+    font-size: 0.8rem;
+    background-color: var(--color-primary);
+    padding: 0.5rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .user-nav__user-photo {
+    height: 3.75rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
 
-.user-nav__user-photo {
-  height: 3.75rem;
-  border-radius: 50%; }
+.side-nav {
+  margin-top: 3.5rem;
+  list-style: none;
+  font-size: 1.4rem; }
+  .side-nav__item {
+    position: relative; }
+    .side-nav__item:not(:last-child) {
+      margin-bottom: 0.5rem; }
+  .side-nav__item::before {
+    content: "";
+    background-color: var(--color-primary);
+    width: 3px;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+  .side-nav__item:hover:before {
+    transform: scaleY(1);
+    width: 100%; }
+  .side-nav__item:active::before {
+    background-color: var(--color-primary-light); }
+  .side-nav__link {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--color-gray-light-1);
+    font-weight: 400;
+    display: block;
+    padding: 1.5rem 3rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 1; }
+  .side-nav__icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 2rem;
+    fill: currentColor; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-gray-light-4);
+  text-align: center;
+  padding: 2.5rem; }
+
+.images {
+  display: flex;
+  width: 100%; }
+  .images > * {
+    width: 33.3%; }
+
+.second-header {
+  font-size: 1.6rem;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem; }
+  .second-header p {
+    text-transform: uppercase; }
+  .second-header .right {
+    display: flex;
+    align-items: center;
+    text-decoration: underline;
+    color: var(--color-primary); }
+    .second-header .right div {
+      background-color: var(--color-primary);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      text-align: center; }
 
 /*
 COLORS
@@ -87,7 +217,7 @@ Grey dark 3: #999
   --color-primary-dark:#BA265D;
   --color-gray-light-1:#faf9f9;
   --color-gray-light-2:#f4f2f2;
-  --color-gray-ligh-3:#f0eeee;
+  --color-gray-light-3:#f0eeee;
   --color-gray-light-4:#ccc;
   --color-gray-dark-1:#333;
   --color-gray-dark-2:#777;
@@ -122,15 +252,23 @@ body {
   min-height: 50rem;
   box-shadow: var(--shadow-box); }
   .container .header {
+    font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-gray-light-2); }
+    border-bottom: 1px solid var(--color-gray-light-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
   .container .content {
     display: flex; }
     .container .content .sidebar {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       flex: 0 0 20%;
-      height: 100%;
+      height: 80rem;
       background-color: var(--color-gray-dark-1); }
     .container .content .hotel-view {
+      flex: 1;
       background-color: orangered;
-      flex: 1; }
+      height: 80rem; }
