--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -28,7 +28,7 @@ Grey dark 3: #999
 
     --color-gray-light-1:#faf9f9;
     --color-gray-light-2:#f4f2f2;
-    --color-gray-ligh-3:#f0eeee;
+    --color-gray-light-3:#f0eeee;
     --color-gray-light-4:#ccc;
 
     --color-gray-dark-1:#333;
