--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -1,37 +1,182 @@
-.header__logo{
-    height: 3.25rem;
+// -----------header -------------
+.header__logo {
+  height: 3.25rem;
+  margin-left: 2rem;
 }
 
-.search{
-    &__input{
-
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //   &__input:focus + &__button{
+  //     background-color: red;
+  //   }
+  &__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-gray-light-2);
+    border: none;
+    padding: 0.7rem 2rem;
+    border-radius: 10rem;
+    width: 80%;
+    margin-right: -3.25rem;
+    transition: width 0.2s;
+    &:focus {
+      width: 90%;
+      outline: none;
+      background-color: var(--color-gray-light-3);
     }
-    &__button{
-
+    &::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-gray-light-4);
     }
-    &__icon{
-        width: 2rem;
-        height: 2rem;
-    }
+  }
+  &__button {
+    // align-self: center;
+    border: none;
+    background-color: transparent;
+  }
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+    fill: var(--color-gray-dark-3);
+  }
 }
-.user-nav{
-    &__icon-box{
+.user-nav {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+  & > *:hover {
+    background-color: var(--color-gray-light-3);
+  }
+  &__icon-box {
+    position: relative;
+  }
+  &__icon {
+    width: 2.25rem;
+    height: 2.25rem;
+    fill: var(--color-gray-dark-2);
+  }
+  &__notification {
+    font-size: 0.8rem;
+    background-color: var(--color-primary);
+    padding: 0.5rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    color: #fff;
+    // position
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
+    // to center the text
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__user-photo {
+    // align-self: flex-end;
+    height: 3.75rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+}
 
+// -----------side bar -------------
+.side-nav {
+  margin-top: 3.5rem;
+  list-style: none;
+  font-size: 1.4rem;
+  &__item {
+    // transition: background-color 0.4s;
+    position: relative;
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
     }
-    &__icon{
-        width: 2.25rem;
-        height: 2.25rem;
+  }
+  &__item::before {
+    content: "";
+    background-color: var(--color-primary);
+    width: 3px;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+      background-color 0.1s;
+  }
+  &__item:hover:before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+  &__link {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--color-gray-light-1);
+    font-weight: 400;
+    display: block;
+    padding: 1.5rem 3rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+  }
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 2rem;
+    // currentColor take parent color event if the color will change on hover
+    fill: currentColor; //var(--color-gray-light-1);
+  }
+}
+// --------- legal --------
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-gray-light-4);
+  text-align: center;
+  padding: 2.5rem;
+}
+.images {
+  display: flex;
+  width: 100%;
+  & > * {
+    width: 33.3%;
+  }
+}
+.second-header {
+  font-size: 1.6rem;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  & p{
+    text-transform: uppercase;
+  }
+  & .right {
+    display: flex;
+    align-items: center;
+    text-decoration: underline;
+    color: var(--color-primary);
+    & div {
+      background-color: var(--color-primary);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
     }
-    &__notification{
-
-    }
-    &__user{
-        &-name{
-            
-        }
-        &-photo{
-            height: 3.75rem;
-            border-radius: 50%;
-        }
-    }
+  }
 }
