--- a/Trillo/starter/sass/_layout.scss
+++ b/Trillo/starter/sass/_layout.scss
@@ -5,21 +5,30 @@
     min-height: 50rem;
     box-shadow: var(--shadow-box);
     & .header{
+        font-size: 1.4rem;
         height: 7rem;
         background-color: #fff;
         border-bottom: 1px solid var(--color-gray-light-2);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
     & .content{
         display: flex;
         & .sidebar{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             flex:0 0 20%;
             // flex-basis: 30rem;
-            height: 100%;
+            height: 80rem;
             background-color: var(--color-gray-dark-1);
         }
         & .hotel-view{
-            background-color:orangered;
             flex:1;
+            // test
+            background-color:orangered;
+            height: 80rem;
         }
     }
 }
