--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -35,7 +35,10 @@ Grey dark 3: #999
     --color-gray-dark-2:#777;
     --color-gray-dark-3:#999;
 
-    --shadow-box:0 2rem 6rem rgba(0,0,0,.3)
+    --shadow-box:0 2rem 6rem rgba(0,0,0,.3);
+    --shadow-light:0 2rem 5rem rgba(0,0,0,.06);
+
+    --line:1px solid var(--color-gray-light-2);
 }
 *{
     margin: 0;
