--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -149,34 +149,103 @@
   text-align: center;
   padding: 2.5rem;
 }
-.images {
+.gallary {
   display: flex;
-  width: 100%;
-  & > * {
-    width: 33.3%;
+  &__photo {
+    width: 100%;
+    display: block;
   }
 }
-.second-header {
-  font-size: 1.6rem;
-  background-color: #fff;
+.overview {
   display: flex;
-  justify-content: space-between;
+  background-color: #fff;
   align-items: center;
-  padding: 2rem;
-  & p{
+  border-bottom: var(--line);
+  &__heading{
+    font-size: 2.25rem;
+    font-weight: 300;
+    letter-spacing: 1px;
     text-transform: uppercase;
+    padding: 1.5rem 3rem;
   }
-  & .right {
+  &__stars{
     display: flex;
+    margin-right: auto;
+  }
+  &__location{
+    display: flex;
+    font-size: 1.2rem;
     align-items: center;
-    text-decoration: underline;
-    color: var(--color-primary);
-    & div {
-      background-color: var(--color-primary);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
+  }
+  &__icon-location{
+    margin-right: .5rem;
+  }
+  &__rating{
+    font-size: 1.5rem;
+    padding: 0 2.25rem;
+    color: #fff;
+    background-color: var(--color-primary);
+    align-self: stretch;
+    margin-left: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &-count{
+      font-size: .8rem;
+      text-transform: uppercase;
+      
     }
+    &-avarage{
+      margin-bottom: -3px;
+      font-size: 2.25rem;
+      font-weight: 200;
+    }
+  }
+  &__icon-star,&__icon-location{
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+}
+.btn-inline{
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  color: var(--color-primary);
+  font-size: inherit;
+  cursor: pointer;
+  // transform: all .1s;
+  &:hover{
+    color: var(--color-gray-dark-1);
+  }
+  &:focus{
+    animation: pulstate 1s 0s infinite ;
+  }
+}
+.recommend{
+  display: flex;
+  &__photo{
+    border-radius: 50%;
+    width: 20%;
+  }
+}
+.list{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+@keyframes pulstate{
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: .25);
+  }
+  100%{
+    transform: scale(1);
   }
 }
