--- a/Trillo/starter/sass/_layout.scss
+++ b/Trillo/starter/sass/_layout.scss
@@ -8,7 +8,7 @@
         font-size: 1.4rem;
         height: 7rem;
         background-color: #fff;
-        border-bottom: 1px solid var(--color-gray-light-2);
+        border-bottom: var(--line);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -21,14 +21,27 @@
             justify-content: space-between;
             flex:0 0 20%;
             // flex-basis: 30rem;
-            height: 80rem;
             background-color: var(--color-gray-dark-1);
         }
         & .hotel-view{
             flex:1;
             // test
-            background-color:orangered;
-            height: 80rem;
         }
+    }
+    .detail{
+        display: flex;
+        padding: 4.5rem;
+    }
+    .description{
+        font-size: 1.4rem;
+        flex: 0 0 60%;
+        background-color: #fff;
+        margin-right: 4.5rem;
+        border-bottom: var(--line);
+        box-shadow: var(--shadow-light);
+    }
+    .user-reviews{
+        flex:1;
+        background-color: cornflowerblue;
     }
 }
