--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -12,6 +12,11 @@
   //   &__input:focus + &__button{
   //     background-color: red;
   //   }
+  @media only screen and(max-width:$bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-gray-light-2);
+  }
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -96,11 +101,21 @@
   margin-top: 3.5rem;
   list-style: none;
   font-size: 1.4rem;
+  @media only screen and(max-width:$bp-meduiam) {
+    display: flex;
+    margin: 0;
+  }
   &__item {
     // transition: background-color 0.4s;
     position: relative;
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+      @media only screen and(max-width:$bp-meduiam) {
+        margin: 0;
+      }
+    }
+    @media only screen and(max-width:$bp-meduiam) {
+      flex: 1;
     }
   }
   &__item::before {
@@ -119,7 +134,8 @@
     transform: scaleY(1);
     width: 100%;
   }
-  &__item:active::before {
+  &__item:active::before,
+  .active {
     background-color: var(--color-primary-light);
   }
   &__link {
@@ -133,6 +149,14 @@
     align-items: center;
     position: relative;
     z-index: 1;
+    @media only screen and(max-width:$bp-meduiam) {
+      justify-content: center;
+      padding: 2rem;
+    }
+    @media only screen and(max-width:$bp-small) {
+      flex-direction: column;
+      padding: 1rem;
+    }
   }
   &__icon {
     width: 2rem;
@@ -140,10 +164,18 @@
     margin-right: 2rem;
     // currentColor take parent color event if the color will change on hover
     fill: currentColor; //var(--color-gray-light-1);
+    @media only screen and(max-width:$bp-small) {
+      margin: 0;
+      margin-bottom: 0.7rem;
+    }
   }
 }
 // --------- legal --------
 .legal {
+  @media only screen and(max-width:$bp-meduiam) {
+    // visibility: hidden;
+    display: none;
+  }
   font-size: 1.2rem;
   color: var(--color-gray-light-4);
   text-align: center;
@@ -161,26 +193,30 @@
   background-color: #fff;
   align-items: center;
   border-bottom: var(--line);
-  &__heading{
+  &__heading {
     font-size: 2.25rem;
     font-weight: 300;
     letter-spacing: 1px;
     text-transform: uppercase;
     padding: 1.5rem 3rem;
+    @media only screen and(max-width:$bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
-  &__stars{
+  &__stars {
     display: flex;
     margin-right: auto;
   }
-  &__location{
+  &__location {
     display: flex;
     font-size: 1.2rem;
     align-items: center;
   }
-  &__icon-location{
-    margin-right: .5rem;
+  &__icon-location {
+    margin-right: 0.5rem;
   }
-  &__rating{
+  &__rating {
     font-size: 1.5rem;
     padding: 0 2.25rem;
     color: #fff;
@@ -191,24 +227,33 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    &-count{
-      font-size: .8rem;
-      text-transform: uppercase;
-      
+    @media only screen and(max-width:$bp-small) {
+      padding: 0 1.5rem;
     }
-    &-avarage{
+    &-count {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      @media only screen and(max-width:$bp-small) {
+        font-size: 0.5rem;
+      }
+    }
+    &-avarage {
       margin-bottom: -3px;
       font-size: 2.25rem;
       font-weight: 200;
+      @media only screen and(max-width:$bp-small) {
+        font-size: 1.8rem;
+      }
     }
   }
-  &__icon-star,&__icon-location{
+  &__icon-star,
+  &__icon-location {
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--color-primary);
   }
 }
-.btn-inline{
+.btn-inline {
   border: none;
   background-color: transparent;
   border-bottom: 1px solid currentColor;
@@ -218,34 +263,212 @@
   font-size: inherit;
   cursor: pointer;
   // transform: all .1s;
-  &:hover{
+  & span {
+    margin-left: 3px;
+    transition: all 0.2s;
+  }
+  &:hover {
     color: var(--color-gray-dark-1);
+    & span {
+      margin-left: 8px;
+    }
   }
-  &:focus{
-    animation: pulstate 1s 0s infinite ;
-  }
-}
-.recommend{
-  display: flex;
-  &__photo{
-    border-radius: 50%;
-    width: 20%;
+  &:focus {
+    animation: pulstate 1s 0s infinite;
   }
 }
-.list{
+
+@keyframes pulstate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: 0.25);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.list {
   list-style: none;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  // flex-direction: column;
+  border-bottom: var(--line);
+  border-top: var(--line);
+  margin: 3rem 0;
+  padding: 3rem 0;
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+    // older browsere
+    background-image: url("../img/chevron-thin-right.svg");
+    background-size: cover;
+
+    // new browsers
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--color-primary);
+      -webkit-mask-image: url("../img/chevron-thin-right.svg");
+      -webkit-mask-size: cover;
+      mask-image: url("../img/chevron-thin-right.svg");
+      mask-size: cover;
+      background-image: none;
+    }
+  }
 }
-@keyframes pulstate{
-  0%{
-    transform: scale(1);
+.paragraph {
+  &:not(:last-of-type) {
+    margin-bottom: 2rem;
   }
-  50%{
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: .25);
+}
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-gray-dark-3);
+  display: flex;
+  align-items: center;
+  &__count {
+    margin-right: auto;
   }
-  100%{
-    transform: scale(1);
+  &__friends {
+    display: flex;
+  }
+  &__photo {
+    box-sizing: content-box;
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    border: 2px solid white;
+    &:not(:last-child) {
+      margin-right: -2rem;
+    }
+  }
+}
+.review {
+  background-color: #fff;
+  margin-bottom: 3.5rem;
+  padding: 3rem;
+  box-shadow: var(--shadow-light);
+  // margin-right: auto;
+  overflow: hidden;
+  @media only screen and(max-width:$bp-meduiam) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
+  &__text {
+    margin-bottom: 1.5rem;
+    z-index: 2;
+    position: relative;
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+    &-box {
+      margin-right: auto;
+    }
+    &-name {
+      font-size: 1.1rem;
+      color: var(--color-gray-dark-2);
+      text-transform: uppercase;
+      font-weight: 400;
+      margin-bottom: 0.4rem;
+    }
+    &-date {
+      font-size: 1rem;
+      color: var(--color-gray-dark-2);
+      font-weight: 100;
+    }
+  }
+  &__rating {
+    font-size: 2rem;
+    color: var(--color-primary);
+    font-weight: 300;
+  }
+  &__photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+  position: relative;
+  &::before {
+    content: "\201C";
+    display: block;
+    font-size: 20rem;
+    position: absolute;
+    top: -7rem;
+    left: -1rem;
+    color: var(--color-gray-light-3);
+    font-family: sans-serif;
+    z-index: 1;
+  }
+}
+// ------- call to action -----------
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: var(--color-gray-light-1);
+  @media only screen and(max-width:$bp-meduiam) {
+    padding: 2.5rem 0;
+  }
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2.5rem;
+  }
+}
+.btn {
+  text-transform: uppercase;
+  border: none;
+  font-size: 1.5rem;
+  font-weight: 300;
+  border-radius: 100px;
+  color: #fff;
+  cursor: pointer;
+  background: linear-gradient(
+    to right,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  position: relative;
+  overflow: hidden;
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all 0.2s;
+  }
+  &__visiable {
+    padding: 2rem 7.5rem;
+  }
+  &__invisiable {
+    padding: 2rem 0;
+    position: absolute;
+    left: 0%;
+    top: -100%;
+  }
+  &:hover {
+    background: linear-gradient(
+      to left,
+      var(--color-primary-light),
+      var(--color-primary-dark)
+    );
+  }
+  &:hover &__visiable {
+    transform: translateY(100%);
+  }
+  &:hover &__invisiable {
+    top: 0;
+  }
+  &:focus {
+    animation: pulstate 1s infinite;
   }
 }
