--- a/Trillo/starter/sass/_layout.scss
+++ b/Trillo/starter/sass/_layout.scss
@@ -1,47 +1,78 @@
-.container{
-    max-width: 120rem;
-    margin: 8rem auto;
-    background-color: var(--color-gray-light-2);
-    min-height: 50rem;
-    box-shadow: var(--shadow-box);
-    & .header{
-        font-size: 1.4rem;
-        height: 7rem;
-        background-color: #fff;
-        border-bottom: var(--line);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--color-gray-light-2);
+  // min-height: 50rem;
+  box-shadow: var(--shadow-box);
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
+  & .header {
+    font-size: 1.4rem;
+    height: 7rem;
+    background-color: #fff;
+    border-bottom: var(--line);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @media only screen and(max-width:$bp-smallest) {
+      flex-wrap: wrap;
+      align-content: space-around;
+      height: 11rem;
     }
-    & .content{
-        display: flex;
-        & .sidebar{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            flex:0 0 20%;
-            // flex-basis: 30rem;
-            background-color: var(--color-gray-dark-1);
-        }
-        & .hotel-view{
-            flex:1;
-            // test
-        }
+  }
+  & .content {
+    display: flex;
+    @media only screen and(max-width:$bp-meduiam) {
+      flex-direction: column;
     }
-    .detail{
-        display: flex;
-        padding: 4.5rem;
+    & .sidebar {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      flex: 0 0 20%;
+      // flex-basis: 30rem;
+      background-color: var(--color-gray-dark-1);
     }
-    .description{
-        font-size: 1.4rem;
-        flex: 0 0 60%;
-        background-color: #fff;
-        margin-right: 4.5rem;
-        border-bottom: var(--line);
-        box-shadow: var(--shadow-light);
+    & .hotel-view {
+      flex: 1;
+      // test
     }
-    .user-reviews{
-        flex:1;
-        background-color: cornflowerblue;
+  }
+  & .detail {
+    display: flex;
+    padding: 4.5rem;
+    font-size: 1.4rem;
+    @media only screen and(max-width:$bp-meduiam) {
+      padding: 3rem;
     }
+    @media only screen and(max-width:$bp-small) {
+      flex-direction: column;
+    }
+  }
+  & .description {
+    flex: 0 0 60%;
+    background-color: #fff;
+    margin-right: 4.5rem;
+    border-bottom: var(--line);
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    @media only screen and(max-width:$bp-meduiam) {
+      padding: 2rem;
+      margin-right: 3rem;
+    }
+    @media only screen and(max-width:$bp-small) {
+      margin-bottom: 3rem;
+      margin-right: 0;
+    }
+  }
+  & .user-reviews {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
