--- a/Nexter/starter/sass/_story.scss
+++ b/Nexter/starter/sass/_story.scss
@@ -1,8 +1,10 @@
 .story{
     &__pictures{
         background-color: $color-primary;
+        grid-column: full-start/7;
     }
     &__content{
         background-color: $color-grey-light-1;
+        grid-column: 7/full-end;
     }
 }
