--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -24,12 +24,40 @@ body {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400; }
 
+.heading--2 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 4rem;
+  line-height: 1;
+  font-style: italic;
+  margin-bottom: 3rem; }
+  .heading--2--dark {
+    color: #54483a; }
+  .heading--2--light {
+    color: #f9f7f6; }
+
+.heading--3 {
+  color: #c69963;
+  font-size: 1.6rem;
+  text-transform: uppercase; }
+
 .heading--4 {
   font-size: 1.9rem; }
   .heading--4--dark {
     color: #54483a; }
-  .heading--4__light {
+  .heading--4--light {
     color: #f9f7f6; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
 
 .sidebar {
   background-color: #c69963;
@@ -51,28 +79,65 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 6rem;
   align-items: start; }
-  .features .feature {
-    display: grid;
-    grid-template-columns: min-content 1fr;
-    grid-column-gap: 2.5rem;
-    grid-row-gap: 1.5rem;
-    justify-items: center; }
-    .features .feature__icon {
-      fill: #c69963;
-      width: 4.5rem;
-      height: 4.5rem;
-      grid-row: 1/span 2;
-      transform: translateY(0.5rem); }
-    .features .feature__text {
-      font-size: 1.7rem; }
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-column-gap: 2.5rem;
+  grid-row-gap: 1.5rem;
+  justify-items: center; }
+  .feature__icon {
+    fill: #c69963;
+    width: 4.5rem;
+    height: 4.5rem;
+    grid-row: 1/span 2;
+    transform: translateY(0.5rem); }
+  .feature__text {
+    font-size: 1.7rem; }
 
 .story__pictures {
   background-color: #c69963;
-  grid-column: full-start/7; }
+  grid-column: full-start/7;
+  background-image: linear-gradient(to bottom, rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  background-position: top left;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  align-items: center; }
+  .story__pictures--1 {
+    grid-column: 2/6;
+    grid-row: 2/6;
+    width: 100%;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  .story__pictures--2 {
+    grid-column: 4/-1;
+    grid-row: 4/6;
+    z-index: 2;
+    width: 115%;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
 
 .story__content {
   background-color: #f9f7f6;
-  grid-column: 7/full-end; }
+  grid-column: 7 / full-end;
+  position: relative;
+  padding: 8vw;
+  display: grid;
+  align-content: center;
+  justify-items: start; }
+
+.btn {
+  text-transform: uppercase;
+  background-color: #c69963;
+  border: none;
+  color: white;
+  padding: 1.5rem 2rem;
+  font-size: 1.6rem;
+  margin-top: 3rem;
+  font-family: "Josefin Sans", sans-serif;
+  transition: all .2s; }
+  .btn:hover {
+    background-color: #b28451;
+    cursor: pointer; }
 
 .homes {
   background-color: #101d2c;
