--- a/Nexter/starter/sass/_story.scss
+++ b/Nexter/starter/sass/_story.scss
@@ -1,10 +1,62 @@
-.story{
-    &__pictures{
-        background-color: $color-primary;
-        grid-column: full-start/7;
+.story {
+  &__pictures {
+    background-color: $color-primary;
+    grid-column: full-start/7;
+    background-image: linear-gradient(
+        to bottom,
+        rgba($color-primary, 0.5),
+        rgba($color-primary, 0.5)
+      ),
+      url(../img/back.jpg);
+      background-position: top left;
+
+      display: grid;
+      grid-template-columns: repeat(6,1fr);
+      grid-template-rows: repeat(6,1fr);
+      align-items: center;
+      &--1{
+        grid-column: 2/6;
+        grid-row: 2/6;
+        width: 100%;
+        box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: .1);
     }
-    &__content{
-        background-color: $color-grey-light-1;
-        grid-column: 7/full-end;
+    &--2{
+        grid-column: 4/-1;
+        grid-row: 4/6;
+        z-index: 2;
+        width: 115%;
+        box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: .2);
+      }
+  }
+  &__content {
+    background-color: $color-grey-light-1;
+    grid-column: 7 / full-end;
+    position: relative;
+    padding: 8vw;
+    // center the content in the container
+    // solution with flexbox
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: start;
+    // same solution with frid
+    display: grid;
+    align-content: center;
+    justify-items: start;
+  }
+}
+.btn{
+    text-transform: uppercase;
+    background-color: $color-primary;
+    border: none;
+    color: white;
+    padding: 1.5rem 2rem;
+    font-size: 1.6rem;
+    margin-top: 3rem;
+    font-family: $font-display;
+    transition: all .2s;
+    &:hover{
+        background-color: $color-primary-dark;
+        cursor: pointer;
     }
 }
