--- a/Nexter/starter/sass/_typography.scss
+++ b/Nexter/starter/sass/_typography.scss
@@ -6,8 +6,24 @@
 .heading--4,.heading--3,.heading--2,.heading--1{
     @extend %heading;
 }
+.heading--2{
+    font-family: $font-display;
+    font-size: 4rem;
+    line-height: 1;
+    font-style: italic;
+    margin-bottom: 3rem;
+
+    &--dark{color:$color-grey-dark-1}
+    &--light{color:$color-grey-light-1}
+}
+.heading--3{
+    color:$color-primary;
+    font-size: 1.6rem;
+    // margin-bottom: 2rem;
+    text-transform: uppercase;
+}
 .heading--4{
     font-size: 1.9rem;
     &--dark{color:$color-grey-dark-1}
-    &__light{color:$color-grey-light-1}
+    &--light{color:$color-grey-light-1}
 }
