--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -140,8 +140,53 @@ body {
     cursor: pointer; }
 
 .homes {
-  background-color: #101d2c;
-  grid-column: center-start/center-end; }
+  grid-column: center-start/center-end;
+  margin: 15rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 6rem; }
+  .homes .home {
+    background-color: #f9f7f6;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); }
+    .homes .home__img {
+      grid-row: 1/2;
+      grid-column: 1/-1;
+      width: 100%; }
+    .homes .home__like {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      justify-self: end;
+      margin: 1rem;
+      fill: #c69963;
+      width: 3rem;
+      height: 3rem; }
+    .homes .home__name {
+      grid-column: 1/-1;
+      width: 80%;
+      justify-self: center;
+      margin-top: -2.5rem;
+      padding: 1.25rem;
+      background-color: #101d2c;
+      text-align: center;
+      color: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 1.6rem;
+      font-weight: 400; }
+    .homes .home__location, .homes .home__rooms {
+      margin-top: 3rem; }
+    .homes .home__location, .homes .home__rooms, .homes .home__area, .homes .home__price {
+      font-size: 1.5rem;
+      margin-left: 2rem;
+      align-items: center;
+      gap: 1rem;
+      display: flex; }
+      .homes .home__location svg, .homes .home__rooms svg, .homes .home__area svg, .homes .home__price svg {
+        fill: #c69963;
+        width: 3rem;
+        height: 3rem; }
+    .homes .home .btn {
+      grid-column: 1/-1; }
 
 .gallary {
   background-color: #54483a;
