--- a/Nexter/starter/sass/_sidebar.scss
+++ b/Nexter/starter/sass/_sidebar.scss
@@ -1,5 +1,31 @@
-.sidebar{
-    background-color: $color-primary;
-    grid-column: sidebar-start / sidebar-end;
-    grid-row: 1/-1;
+.sidebar {
+  background-color: $color-primary;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1/-1;
+
+  display: flex;
+  justify-content: center;
+}
+.btn-nav {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  width: 5rem;
+  height: 0.2rem;
+  margin-top: 3rem;
+
+  &::after,
+  &::before {
+    content: "";
+    width: 5rem;
+    height: 0.2rem;
+    display: block;
+    background-color: #fff;
+  }
+  &::after {
+    transform: translateY(-1.5rem);
+  }
+  &::before {
+    transform: translateY(1.3rem);
+  }
 }
