--- a/Nexter/starter/css/style.css
+++ b/Nexter/starter/css/style.css
@@ -8,6 +8,9 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "Nunito", sans-serif;
@@ -19,8 +22,18 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 62.5em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
-.heading--4, .heading--3, .heading--2, .heading--1 {
+.heading--4,
+.heading--3,
+.heading--2,
+.heading--1 {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400; }
 
@@ -70,6 +83,12 @@ body {
   grid-row: 1/-1;
   display: flex;
   justify-content: center; }
+  @media only screen and (max-width: 62.5em) {
+    .sidebar {
+      grid-column: 1 / -1;
+      grid-row: 1/2;
+      justify-content: end;
+      align-items: center; } }
 
 .btn-nav {
   border: none;
@@ -78,6 +97,14 @@ body {
   width: 5rem;
   height: 0.2rem;
   margin-top: 3rem; }
+  @media only screen and (max-width: 62.5em) {
+    .btn-nav {
+      margin-top: 0;
+      margin-right: 3rem; }
+      .btn-nav::after {
+        transform: translateY(-1rem); }
+      .btn-nav::before {
+        transform: translateY(1.2rem); } }
   .btn-nav::after, .btn-nav::before {
     content: "";
     width: 5rem;
@@ -97,33 +124,43 @@ body {
   padding: 4rem 6rem;
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   align-items: start;
   justify-items: start;
   justify-content: center;
-  align-content: center;
-  grid-gap: 1.5rem; }
+  gap: 1.5rem; }
+  @media only screen and (max-width: 62.5em) {
+    .header {
+      grid-column: full-start/col-end 6; } }
+  @media only screen and (max-width: 50em) {
+    .header {
+      grid-column: full-start/-1; } }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      padding: 5rem; } }
   .header__logo {
     justify-self: center;
     height: 3rem; }
   .header__seenon-text {
     display: grid;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color: #aaa;
     grid-template-columns: 1fr max-content 1fr;
-    align-items: center; }
-    .header__seenon-text::after, .header__seenon-text::before {
+    gap: 2rem; }
+    .header__seenon-text::before, .header__seenon-text::after {
       content: "";
+      height: 8px;
       display: block;
-      height: 1px;
-      width: 20rem;
-      background-color: currentColor; }
+      background-color: #fff; }
   .header__seenon-logos {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
-    filter: brightness(70%); }
+    align-items: center; }
     .header__seenon-logos img {
-      height: 2.5rem; }
+      filter: brightness(70%);
+      max-height: 2.5rem;
+      max-width: 100%; }
 
 .realtors {
   background-color: #101d2c;
@@ -134,11 +171,20 @@ body {
   align-content: center;
   justify-items: center;
   gap: 2rem; }
+  @media only screen and (max-width: 50em) {
+    .realtors {
+      grid-column: full-start/-1; } }
   .realtors__list {
     display: grid;
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: min-content max-content;
     gap: 2rem;
-    margin-bottom: 5vh; }
+    align-items: center; }
+    @media only screen and (max-width: 50em) {
+      .realtors__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 37.5em) {
+      .realtors__list {
+        grid-template-columns: min-content max-content; } }
   .realtors__img {
     width: 4rem;
     height: 4rem;
@@ -186,12 +232,24 @@ body {
     grid-row: 2/6;
     width: 100%;
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+    @media only screen and (max-width: 50em) {
+      .story__pictures--1 {
+        grid-column: 1/5;
+        grid-row: 1/-1; } }
   .story__pictures--2 {
     grid-column: 4/-1;
     grid-row: 4/6;
     z-index: 2;
     width: 115%;
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
+    @media only screen and (max-width: 50em) {
+      .story__pictures--2 {
+        grid-row: 1/-1;
+        width: 100%; } }
+  @media only screen and (max-width: 50em) {
+    .story__pictures {
+      grid-column: full-start/-1;
+      padding: 6rem; } }
 
 .story__content {
   background-color: #f9f7f6;
@@ -201,6 +259,10 @@ body {
   display: grid;
   align-content: center;
   justify-items: start; }
+  @media only screen and (max-width: 50em) {
+    .story__content {
+      grid-column: full-start/-1;
+      grid-row: 5/6; } }
 
 .btn {
   text-transform: uppercase;
@@ -211,7 +273,7 @@ body {
   font-size: 1.6rem;
   margin-top: 3rem;
   font-family: "Josefin Sans", sans-serif;
-  transition: all .2s; }
+  transition: all 0.2s; }
   .btn:hover {
     background-color: #b28451;
     cursor: pointer; }
