--- a/Nexter/starter/sass/_base.scss
+++ b/Nexter/starter/sass/_base.scss
@@ -13,6 +13,12 @@ $color-grey-dark-2: #6d5d4b;
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
+
+// responsive breakpoints
+$bp-largest: 75em; // 1200/16
+$bp-large: 62.5em; // 1000/16
+$bp-medium: 50em; // 800/16
+$bp-small: 37.5em; // 600/16
 *,
 *::after,
 *::before {
@@ -21,7 +27,10 @@ $font-display: "Josefin Sans", sans-serif;
   box-sizing: inherit;
 }
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 16/10 -> 1rem=10px
+  @media only screen and(max-width:$bp-largest) {
+    font-size: 50%;
+  }
   box-sizing: border-box;
 }
 body {
@@ -33,9 +42,22 @@ body {
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
-//   1fr take 1fr from the remaining space and if there is no space it is disappear we want to keep some space even if there is no space 
-  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem,1fr) [center-start]repeat(
-      8,
-      [col-start] minmax(min-content, 14rem) [col-end]
-    ) [center-end] minmax(6rem,1fr) [full-end];
+  //   1fr take 1fr from the remaining space and if there is no space it is disappear we want to keep some space even if there is no space
+  grid-template-columns:
+    [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr)
+    [center-start]repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+    [center-end] minmax(6rem, 1fr) [full-end];
+
+  @media only screen and(max-width:$bp-large) {
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns:
+      [full-start] minmax(6rem, 1fr) [center-start]repeat(
+        8,
+        [col-start] minmax(min-content, 14rem) [col-end]
+      )
+      [center-end] minmax(6rem, 1fr) [full-end];
+  }
+  @media only screen and(max-width:$bp-medium) {
+    grid-template-rows: 6rem calc(100vh - 6rem); // if the rows will be min-content we does not have to spacify value for them;because the automatic placement algorithm will take care of that
+  }
 }
