--- a/Nexter/starter/sass/_sidebar.scss
+++ b/Nexter/starter/sass/_sidebar.scss
@@ -2,7 +2,12 @@
   background-color: $color-primary;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1/-1;
-
+  @media only screen and (max-width: $bp-large) {
+    grid-column: 1 / -1;
+    grid-row: 1/2;
+    justify-content: end;
+    align-items: center;
+  }
   display: flex;
   justify-content: center;
 }
@@ -13,7 +18,16 @@
   width: 5rem;
   height: 0.2rem;
   margin-top: 3rem;
-
+  @media only screen and (max-width: $bp-large) {
+    margin-top: 0;
+    margin-right: 3rem;
+    &::after {
+      transform: translateY(-1rem);
+    }
+    &::before {
+      transform: translateY(1.2rem);
+    }
+  }
   &::after,
   &::before {
     content: "";
