--- a/Nexter/starter/sass/_story.scss
+++ b/Nexter/starter/sass/_story.scss
@@ -8,27 +8,43 @@
         rgba($color-primary, 0.5)
       ),
       url(../img/back.jpg);
-      background-position: top left;
+    background-position: top left;
 
-      display: grid;
-      grid-template-columns: repeat(6,1fr);
-      grid-template-rows: repeat(6,1fr);
-      align-items: center;
-      &--1{
-        grid-column: 2/6;
-        grid-row: 2/6;
-        width: 100%;
-        box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: .1);
-    }
-    &--2{
-        grid-column: 4/-1;
-        grid-row: 4/6;
-        z-index: 2;
-        width: 115%;
-        box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: .2);
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    align-items: center;
+    &--1 {
+      grid-column: 2/6;
+      grid-row: 2/6;
+      width: 100%;
+      box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: 0.1);
+      @media only screen and (max-width: $bp-medium) {
+        grid-column: 1/5;
+        grid-row: 1/-1;
       }
+    }
+    &--2 {
+      grid-column: 4/-1;
+      grid-row: 4/6;
+      z-index: 2;
+      width: 115%;
+      box-shadow: 0 2rem 5rem rgba($color: #000000, $alpha: 0.2);
+      @media only screen and (max-width: $bp-medium) {
+        grid-row: 1/-1;
+        width: 100%;
+      }
+    }
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: full-start/-1;
+      padding: 6rem;
+    }
   }
   &__content {
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: full-start/-1;
+      grid-row: 5/6;
+    }
     background-color: $color-grey-light-1;
     grid-column: 7 / full-end;
     position: relative;
@@ -45,18 +61,18 @@
     justify-items: start;
   }
 }
-.btn{
-    text-transform: uppercase;
-    background-color: $color-primary;
-    border: none;
-    color: white;
-    padding: 1.5rem 2rem;
-    font-size: 1.6rem;
-    margin-top: 3rem;
-    font-family: $font-display;
-    transition: all .2s;
-    &:hover{
-        background-color: $color-primary-dark;
-        cursor: pointer;
-    }
+.btn {
+  text-transform: uppercase;
+  background-color: $color-primary;
+  border: none;
+  color: white;
+  padding: 1.5rem 2rem;
+  font-size: 1.6rem;
+  margin-top: 3rem;
+  font-family: $font-display;
+  transition: all 0.2s;
+  &:hover {
+    background-color: $color-primary-dark;
+    cursor: pointer;
+  }
 }
