--- a/Nexter/starter/sass/_typography.scss
+++ b/Nexter/starter/sass/_typography.scss
@@ -1,34 +1,45 @@
 // this will replace selectors rather than %heading
-%heading{
-    font-family: $font-display;
-    font-weight: 400;
+%heading {
+  font-family: $font-display;
+  font-weight: 400;
 }
-.heading--4,.heading--3,.heading--2,.heading--1{
-    @extend %heading;
+.heading--4,
+.heading--3,
+.heading--2,
+.heading--1 {
+  @extend %heading;
 }
-.heading--1{
-    font-size: 4.5rem;
-    color: $color-grey-light-1;
-    line-height: 1;
+.heading--1 {
+  font-size: 4.5rem;
+  color: $color-grey-light-1;
+  line-height: 1;
 }
-.heading--2{
-    font-family: $font-display;
-    font-size: 4rem;
-    line-height: 1;
-    font-style: italic;
-    margin-bottom: 3rem;
+.heading--2 {
+  font-family: $font-display;
+  font-size: 4rem;
+  line-height: 1;
+  font-style: italic;
+  margin-bottom: 3rem;
 
-    &--dark{color:$color-grey-dark-1}
-    &--light{color:$color-grey-light-1}
+  &--dark {
+    color: $color-grey-dark-1;
+  }
+  &--light {
+    color: $color-grey-light-1;
+  }
 }
-.heading--3{
-    color:$color-primary;
-    font-size: 1.6rem;
-    // margin-bottom: 2rem;
-    text-transform: uppercase;
+.heading--3 {
+  color: $color-primary;
+  font-size: 1.6rem;
+  // margin-bottom: 2rem;
+  text-transform: uppercase;
 }
-.heading--4{
-    font-size: 1.9rem;
-    &--dark{color:$color-grey-dark-1}
-    &--light{color:$color-grey-light-1}
+.heading--4 {
+  font-size: 1.9rem;
+  &--dark {
+    color: $color-grey-dark-1;
+  }
+  &--light {
+    color: $color-grey-light-1;
+  }
 }
